--- a/app/src/main/res/layout/fragment_series_item.xml
+++ b/app/src/main/res/layout/fragment_series_item.xml
@@ -23,7 +23,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-        <include layout="@layout/bottom_sheet_video" />
+        <include
+                android:id="@+id/btmLayout"
+                layout="@layout/bottom_sheet_video" />
 
         <ProgressBar
                 android:id="@+id/prgBar"
