--- a/app/src/main/res/layout/fragment_series_episode.xml
+++ b/app/src/main/res/layout/fragment_series_episode.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/detail_bg"
-        tools:context=".ui.fragment.SeriesEpisodeFragment">
+        tools:context=".ui.detail.SeriesEpisodeFragment">
 
     <TextView
         android:id="@+id/txtNoSeason"
